# 3dEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
.zed/: settings.json
Assets/Shaders/: Balatro.fx  CelShader.hlsl  PostProcessing.fx  Shadow.hlsl  Standard.fx  Standard.hlsl  Terrain.fx
Cmake/: common.cmake  compileshaders.cmake  engine_lib.cmake  example.cmake  framework_lib.cmake  library.cmake  mingw-toolchain.cmake
Engine/: CMakeLists.txt
Engine/engine/: CMakeLists.txt
Examples/: CMakeLists.txt
Examples/01_HelloWindow/: CMakeLists.txt  WinMain.cpp
Examples/01_Window/: CMakeLists.txt
Examples/02_HelloShapes/: CMakeLists.txt  ShapeState.cpp
Examples/02_Shapes/: CMakeLists.txt  ShapeState.cpp  ShapeState.h  WinMain.cpp
Examples/03_Cube/: CMakeLists.txt  WinMain.cpp
Examples/03_HelloCube/: CMakeLists.txt  ShapeState.cpp  ShapeState.h  WinMain.cpp
Examples/04_HelloMeshBuilder/: CMakeLists.txt  ShapeState.cpp  WinMain.cpp
Examples/04_MeshBuilder/: CMakeLists.txt
Examples/05_Debug/: CMakeLists.txt  WinMain.cpp
Examples/05_HelloDebug/: CMakeLists.txt  GameState.cpp  GameState.h
Examples/06_HelloRenderTarget/: CMakeLists.txt  GameState.cpp  GameState.h  WinMain.cpp
Examples/06_RenderTarget/: CMakeLists.txt  WinMain.cpp
Examples/07_HelloSolarSystem/: CMakeLists.txt  WinMain.cpp  imgui.ini
Examples/07_SolarSystem/: CMakeLists.txt  GameState.cpp
Examples/08_HelloLighting/: CMakeLists.txt  GameState.cpp  WinMain.cpp
Examples/08_Lighting/: CMakeLists.txt  GameState.h
Examples/09_CellShader/: CMakeLists.txt  GameState.cpp  WinMain.cpp
Examples/09_HelloCellShader/: CMakeLists.txt  GameState.cpp  GameState.h  WinMain.cpp
Examples/10_HelloModel/: CMakeLists.txt  GameState.cpp  GameState.h  WinMain.cpp
Examples/10_Model/: CMakeLists.txt  GameState.h  WinMain.cpp
Examples/11_HelloPostProcessing/: CMakeLists.txt  GameState.cpp
Examples/11_PostProcessing/: CMakeLists.txt  GameState.h  WinMain.cpp
Examples/12_HelloShadow/: CMakeLists.txt  GameState.cpp  WinMain.cpp
Examples/12_Shadow/: CMakeLists.txt  GameState.cpp  GameState.h
Examples/13_HelloTerrain/: CMakeLists.txt  GameState.cpp  WinMain.cpp
Examples/13_Terrain/: CMakeLists.txt  GameState.h
Examples/14_Animation/: CMakeLists.txt  GameState.h  WinMain.cpp
Examples/14_Balatro/: CMakeLists.txt
Examples/14_HelloBalatro/: BalatroEffect.cpp  BalatroEffect.h  CMakeLists.txt  GameState.cpp  GameState.h  WinMain.cpp
Examples/15_Quaternion/: CMakeLists.txt  WinMain.cpp
Examples/1_hello_desktop/: WinMain.cpp
Examples/2_hello_shapes/: CMakeLists.txt  ShapeState.cpp
Examples/3_hello_cube/: ShapeState.cpp  ShapeState.h  WinMain.cpp
Examples/4_hello_mesh_builder/: ShapeState.cpp  WinMain.cpp
Examples/5_hello_debug/: CMakeLists.txt  WinMain.cpp
Examples/6_hello_render_target/: CMakeLists.txt  GameState.cpp  WinMain.cpp
Examples/7_solar_system/: CMakeLists.txt  GameState.cpp  GameState.h  WinMain.cpp
Examples/8_hello_lighting/: CMakeLists.txt  GameState.cpp  WinMain.cpp
Examples/Balatro/: BalatroEffect.h  CMakeLists.txt
Framework/Core/: CMakeLists.txt
Framework/Graphics/: CMakeLists.txt
Framework/Graphics/Inc/: BlendState.h  Camera.h  Color.h  Common.h  DebugUI.h  DirectionalLight.h  Graphics.h  GraphicsSystem.h  Material.h  MeshBuffer.h  MeshBuilder.h  MeshTypes.h  Model.h  ModelIO.h  ModelManager.h  PixelShader.h  PostProcessingEffect.h  RenderObject.h  Sampler.h  ShadowEffect.h  SimpleDraw.h  SimpleTextureEffect.h  StandardEffect.h  Terrain.h  TerrainEffect.h  Texture.h  TextureManager.h  VertexShader.h  VertexTypes.h  graphics.h
Framework/Graphics/Src/: BlendState.cpp  Camera.cpp  ConstantBuffer.cpp  DebugUI.cpp  GraphicsSystem.cpp  MeshBuffer.cpp  MeshBuilder.cpp  ModelIO.cpp  ModelManager.cpp  PixelShader.cpp  PostProcessingEffect.cpp  RenderObject.cpp  RenderTarget.cpp  Sampler.cpp  ShadowEffect.cpp  SimpleDraw.cpp  SimpleTextureEffect.cpp  StandardEffect.cpp  Terrain.cpp  TerrainEffect.cpp  Texture.cpp  TextureManager.cpp  VertexShader.cpp  X11Window.cpp
Framework/Input/: CMakeLists.txt
Framework/Math/: CMakeLists.txt
Tools/: CMakeLists.txt
Tools/ModelImporter/: CMakeLists.txt  main.cpp
cmake/: common.cmake  example.cmake  library.cmake
engine/engine/: CMakeLists.txt
examples/: CMakeLists.txt
examples/1_hello_desktop/: CMakeLists.txt  WinMain.cpp  main.cpp
examples/2_hello_shapes/: CMakeLists.txt  ShapeState.cpp  ShapeState.h  WinMain.cpp  main.cpp  shape_state.cpp  shape_state.h
(+138 files in other folders)
