add_subdirectory(01_Window)
add_subdirectory(02_Shapes)
add_subdirectory(03_Cube)
add_subdirectory(04_MeshBuilder)
add_subdirectory(05_Debug)
add_subdirectory(06_RenderTarget)
add_subdirectory(07_SolarSystem)
add_subdirectory(08_Lighting)
add_subdirectory(09_CellShader)
add_subdirectory(10_Model)
add_subdirectory(11_PostProcessing)
add_subdirectory(12_Shadow)
add_subdirectory(13_Terrain)
add_subdirectory(14_Animation)
add_subdirectory(Balatro)
